tests/spec/emit/snapshots/interop_comma_ok_map_return_keeps_bool.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/reg"
  
  fn main() {
    match reg.Lookup("a") {
      Some(m) => { let _ = m.length() },
      None => { let _ = 0 },
    }
  }
---
package main

import "example.com/reg"

func main() {
	ret_1, ok := reg.Lookup("a")
	if ok && ret_1 != nil {
		m := ret_1
		_ = len(m)
	}
}
