tests/spec/emit/snapshots/interop_comma_ok_propagate_in_try_block_fuses.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:os"
  
  fn lookup(k: string) -> Option<string> {
    try {
      let v = os.LookupEnv(k)?
      v
    }
  }
  
  fn main() {
    match lookup("HOME") {
      Some(v) => { let _ = v },
      None => { let _ = 0 },
    }
  }
---
package main

import "os"

func lookup(k string) (string, bool) {
	v, ok := os.LookupEnv(k)
	if !ok {
		return "", false
	}
	return v, true
}

func main() {
	if v, ok := lookup("HOME"); ok {
		_ = v
	}
}
