tests/spec/emit/snapshots/interop_comma_ok_return_pos.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:os"
  
  fn make_lookup() -> fn(string) -> Option<string> {
    os.LookupEnv
  }
  
  fn main() {
    let f = make_lookup()
    let r = f("HOME")
    match r {
      Some(v) => { let _ = v },
      None => { let _ = "" },
    }
  }
---
package main

import "os"

func makeLookup() func(string) (string, bool) {
	return os.LookupEnv
}

func main() {
	f := makeLookup()
	r, ok := f("HOME")
	if ok {
		_ = r
	}
}
