tests/spec/emit/snapshots/interop_comma_ok_slice_option_prelude_map_arg.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn main() {
    let keys: Slice<string> = ["k"]
    let out = keys.map(aws.Fetch)
    let _ = out
  }
---
package main

import (
	"example.com/aws"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	keys := []string{"k"}
	out := lisette.SliceMap(keys, func(arg0 string) lisette.Option[[]lisette.Option[string]] {
		ret, ret_1 := aws.Fetch(arg0)
		if ret_1 {
			wrapped := make([]lisette.Option[string], len(ret))
			for i, v := range ret {
				if v != nil {
					wrapped[i] = lisette.MakeOptionSome[string](*v)
				} else {
					wrapped[i] = lisette.MakeOptionNone[string]()
				}
			}
			return lisette.MakeOptionSome[[]lisette.Option[string]](wrapped)
		}
		return lisette.MakeOptionNone[[]lisette.Option[string]]()
	})
	_ = out
}
