tests/spec/emit/snapshots/interop_comma_ok_slice_option_return.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:fmt"
  import "go:example.com/aws"
  
  fn main() {
    match aws.Fetch() {
      Some(xs) => {
        for x in xs {
          match x {
            Some(v) => fmt.Println(v),
            None => fmt.Println("none"),
          }
        }
      },
      None => fmt.Println("missing"),
    }
  }
---
package main

import (
	"example.com/aws"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	ret, ret_1 := aws.Fetch()
	var option lisette.Option[[]lisette.Option[string]]
	if ret_1 {
		wrapped := make([]lisette.Option[string], len(ret))
		for i, v := range ret {
			if v != nil {
				wrapped[i] = lisette.MakeOptionSome[string](*v)
			} else {
				wrapped[i] = lisette.MakeOptionNone[string]()
			}
		}
		option = lisette.MakeOptionSome[[]lisette.Option[string]](wrapped)
	} else {
		option = lisette.MakeOptionNone[[]lisette.Option[string]]()
	}
	if option.Tag == lisette.OptionSome {
		for _, x := range option.SomeVal {
			if x.Tag == lisette.OptionSome {
				fmt.Println(x.SomeVal)
			} else {
				fmt.Println("none")
			}
		}
	} else {
		fmt.Println("missing")
	}
}
