tests/spec/emit/snapshots/interop_const_pattern_match_arm_nested_module.snap
---
source: tests/spec/emit/interop_matrix.rs
description: "input: \nimport \"go:debug/dwarf\"\n\nfn describe(a: dwarf.Attr) -> string {\n  match a {\n    dwarf.AttrArtificial => \"artificial\",\n    dwarf.AttrByteSize   => \"byte size\",\n    _ => \"other\",\n  }\n}\n"
---
package main

import "debug/dwarf"

func describe(a dwarf.Attr) string {
	switch a {
	case dwarf.AttrArtificial:
		return "artificial"
	case dwarf.AttrByteSize:
		return "byte size"
	default:
		return "other"
	}
}
