tests/spec/emit/snapshots/interop_const_pattern_match_arm_nested_package.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:debug/dwarf"
  
  fn describe(a: dwarf.Attr) -> string {
    match a {
      dwarf.AttrArtificial => "artificial",
      dwarf.AttrByteSize   => "byte size",
      _ => "other",
    }
  }
---
package main

import "debug/dwarf"

func describe(a dwarf.Attr) string {
	switch a {
	case dwarf.AttrArtificial:
		return "artificial"
	case dwarf.AttrByteSize:
		return "byte size"
	default:
		return "other"
	}
}
